Fixed blog listing spacing

--- a/src/pages/blog.css
+++ b/src/pages/blog.css
@@ -6,6 +6,8 @@
     width: 100%;
     height: 14em;
     display: block;
+    box-sizing: border-box;
+    margin-bottom: 2em;
 
     padding: 1em;
     border-radius: 0.25em;
